Created slider on main page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,10 @@
         "semi-style": [
             "error",
             "last"
+        ],
+        "quotes": [
+            "warn",
+            "single"
         ]
     }
 }
