--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@mui/material": "^5.11.3",
         "next": "13.1.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "swiper": "^8.4.5"
     },
     "devDependencies": {
         "@next/font": "13.1.1",
