--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "lib": [
+            "es6",
             "dom",
             "dom.iterable",
             "esnext"
@@ -18,7 +19,10 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "jsxImportSource": "@emotion/react",
-        "incremental": true
+        "incremental": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "strictNullChecks": true
     },
     "include": [
         "next-env.d.ts",
